--- a/config/database.yml
+++ b/config/database.yml
@@ -12,7 +12,7 @@ default: &default
   username: postgres
   host: localhost
   port: 5432
-  password: Ttnkf@g2011!
+  password: 5049
 
 development:
   <<: *default
